--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Burger menu-øvelse</title>
   <link rel="stylesheet" href="css/demo.css">
   <!-- Ret i nedenståendde stylesheet -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         </p>
       </header>
 
-      <form>
+      <form name="kontakt" netlify>
         <!-- Formular-indhold -->
         <div class="form-felt">
           <label for="fornavn">Fornavn</label>
